--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,71 @@
 /* Write your CSS here! */
+
+body {
+	width: 100%;
+	max-width: 1024px;
+	margin: 0 auto;
+	background-color: #6c4e81;
+	font-size: 62.5%;
+}
+
+footer {
+	background-color: #6c4e81;
+	font-size: 16px;
+	text-align: center;
+	padding: 3em;
+}
+
+h1 {
+	color: 6c4e81;
+	font-size: 24px;
+}
+
+h2 {
+	color: 6c4e81;
+	font-size: 16px;
+}
+
+nav ul {
+	text-align: center;
+	padding: 0;
+	font-size: 16px;
+}
+
+nav ul li {
+	display: inline-block;
+	margin-right: 1em;
+	font-size: 16px;
+}
+
+p {
+	padding: 1.25em;
+	font-family: verdana;
+	font-size: 20px;
+}
+
+figure {
+	width: 100%;
+	max-width: 100%;
+ 	border: 8px solid #6c4e81;
+  	margin-top: 10px;
+  	margin-bottom: 10px;
+  	margin-right: 10px;
+  	margin-left: 10px;
+  	background-color: 6c4e81;
+	    }
+
+figcaption {
+	font-style: italic;
+	font-size: 16px;
+}
+
+img {
+	width: 100%;
+	max-width: 100%;
+ 	border: 8px solid #6c4e81;
+  	margin-top: 10px;
+  	margin-bottom: 10px;
+  	margin-right: 10px;
+  	margin-left: 10px;
+  	background-color: 6c4e81;
+	    }
